--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(redis_perf redis_perf.cc memcached.cc)
 add_executable(redis_perf_tpt redis_perf_tpt.cc memcached.cc)
 
-add_compile_options(
-    "-g"
-)
-
 target_link_libraries(
     redis_perf
     redis++
@@ -25,3 +21,5 @@ target_link_libraries(
     pthread
     memcached
 )
+
+target_compile_options(redis_perf PRIVATE -O0 -g)
