add direct test code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(redis_perf redis_perf.cc memcached.cc)
 add_executable(redis_perf_tpt redis_perf_tpt.cc memcached.cc)
+add_executable(redis_perf_tpt_direct redis_perf_tpt_direct.cc memcached.cc)
 
 target_link_libraries(
     redis_perf
@@ -22,5 +23,14 @@ target_link_libraries(
     memcached
 )
 
+target_link_libraries(
+    redis_perf_tpt_direct
+    redis++
+    hiredis
+    pthread
+    memcached
+)
+
 target_compile_options(redis_perf PRIVATE -O0 -g)
 target_compile_options(redis_perf_tpt PRIVATE -O2 -g)
+target_compile_options(redis_perf_tpt_direct PRIVATE -O0 -g)
