--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(DMCRedis LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(redis_perf redis_perf.cc memcached.cc)
-add_executable(redis_perf_tpt redis_perf_tpt.cc memcached.cc)
-add_executable(redis_perf_tpt_direct redis_perf_tpt_direct.cc memcached.cc)
+add_executable(redis_load_ycsb redis_load_ycsb.cc memcached.cc)
+add_executable(redis_trans_ycsb redis_trans_ycsb.cc memcached.cc)
 
 target_link_libraries(
     redis_perf
@@ -16,7 +16,7 @@ target_link_libraries(
 )
 
 target_link_libraries(
-    redis_perf_tpt
+    redis_load_ycsb
     redis++
     hiredis
     pthread
@@ -24,7 +24,7 @@ target_link_libraries(
 )
 
 target_link_libraries(
-    redis_perf_tpt_direct
+    redis_trans_ycsb
     redis++
     hiredis
     pthread
@@ -32,5 +32,5 @@ target_link_libraries(
 )
 
 target_compile_options(redis_perf PRIVATE -O0 -g)
-target_compile_options(redis_perf_tpt PRIVATE -O2 -g)
-target_compile_options(redis_perf_tpt_direct PRIVATE -O0 -g)
+target_compile_options(redis_load_ycsb PRIVATE -O0 -g)
+target_compile_options(redis_trans_ycsb PRIVATE -O0 -g)
